# book-service

./: .env  .env.sample  docker-compose.yml  pyproject.toml  readme.MD
admin/common/: kgs.py  models.py  pagination.py
admin/core/: settings.py  urls.py
admin/user/: enums.py  models.py
admin/user/management/commands/: consume_users.py
admin/user/migrations/: 0001_initial.py
admin/user/v1/: serializers.py  urls.py  views.py
app/: auth.py  config.py  consumer.py  database.py  main.py  models.py  schemas.py
app/api/routes/: auth_routes.py  books.py  borrow.py
docker/admin/: Dockerfile
docker/app/: Dockerfile
kafka/data/kafka/data/: meta.properties  recovery-point-offset-checkpoint  replication-offset-checkpoint
kafka/data/kafka/data/__consumer_offsets-28/: partition.metadata
kafka/data/kafka/data/book_created_topic-0/: partition.metadata
kafka/data/kafka/data/borrow_book_topic-0/: partition.metadata
kafka/data/kafka/data/user_registration_topic-0/: partition.metadata
